db-move: moved expac from [testing] to [extra] (x86_64)
git-svn-id: file:///srv/repos/svn-packages/svn@365379 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/repos/extra-x86_64/PKGBUILD
+++ b/repos/extra-x86_64/PKGBUILD
@@ -1,12 +1,11 @@
-# $Id: PKGBUILD 87501 2013-04-02 00:06:04Z dreisner $
 # Maintainer: Dave Reisner <d@falconindy.com>
 
 pkgname=expac
 pkgver=9
-pkgrel=1
+pkgrel=2
 pkgdesc="pacman database extraction utility"
 arch=('x86_64')
-url="http://github.com/falconindy/expac"
+url="https://github.com/falconindy/expac"
 license=('GPL')
 depends=('pacman')
 makedepends=('perl')
