--- a/repos/testing-x86_64/PKGBUILD
+++ b/repos/testing-x86_64/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgbase=efl
 pkgname=('efl' 'efl-docs')
-pkgver=1.23.0
+pkgver=1.23.1
 pkgrel=1
 pkgdesc="Enlightenment Foundation Libraries"
 arch=('x86_64')
@@ -28,7 +28,7 @@ optdepends=('geoclue: For elocation'
 makedepends=('doxygen' 'python' 'texlive-core' 'ghostscript' 'imagemagick' 'meson' 'ninja')
 options=('!emptydirs')
 source=(https://download.enlightenment.org/rel/libs/${pkgname}/$pkgname-$pkgver.tar.xz)
-sha256sums=('cd9625161b324621f873f00eb841de03398892078ce73d60205abd1766c15cc5')
+sha256sums=('d62220cca16d434c18b36fe3acffa0f5c0e669da4931b133524183308f242f61')
 
 
 build() {
@@ -57,7 +57,6 @@ build() {
 
   cd build/doc
   doxygen
-  #make -j1 doc || return 0  # don't fail on the docs
 }
 
 package_efl(){
@@ -81,7 +80,7 @@ package_efl-docs() {
   install -d "${pkgdir}/usr/share/doc/${pkgbase}"
   cp -a html "${pkgdir}/usr/share/doc/${pkgbase}/html"
   cp -a latex "${pkgdir}/usr/share/doc/${pkgbase}/latex"
-  cp -a man "${pkgdir}/usr/share"
+  #cp -a man "${pkgdir}/usr/share"
   
 }
 
