Switch to python 3
git-svn-id: file:///srv/repos/svn-packages/svn@387811 eb2447ed-0c53-47e4-bac8-5bc4a241df78

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname=('munin' 'munin-node')
 pkgbase=munin
 pkgver=2.0.63
-pkgrel=1
+pkgrel=2
 pkgdesc="A distributed monitoring/graphing tool"
 arch=('any')
 url="http://munin-monitoring.org/"
@@ -66,7 +66,7 @@ package_munin-node() {
 	optdepends=('perl-net-snmp: for SNMP plugins'
 	            'perl-net-ssleay: for SSL/TLS support'
 	            'perl-dbi: for database monitoring plugins'
-	            'python2: for some plugins'
+	            'python: for some plugins'
 	            'ruby: for some plugins')
 	backup=(etc/munin/munin-node.conf etc/logrotate.d/munin-node)
 	install=munin-node.install
@@ -83,7 +83,7 @@ package_munin-node() {
 }
 
 md5sums=('c94430a387624971087fe4cf6814409c'
-         'e453f18d0c1a4d9b06abfbcaacad2be4'
+         'ddd12ed7e02015fee9cb00c9afc3e837'
          'dc9c83aa2a278466fb475364462f4119'
          'eb2f1e6e746e85ce1e91111f40086be0'
          'cdf139f2b6ae36852113f3411caa6e99'
