--- a/repos/extra-x86_64/PKGBUILD
+++ b/repos/extra-x86_64/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=irccat
 pkgver=0.4.5
-pkgrel=2
+pkgrel=3
 pkgdesc='cat to IRC'
 arch=('x86_64')
 url="https://github.com/irccloud/irccat"
@@ -17,7 +17,10 @@ build() {
   cd $pkgname-$pkgver
   go build \
     -trimpath \
-    -ldflags "-extldflags $LDFLAGS" \
+    -buildmode=pie \
+    -mod=readonly \
+    -modcacherw \
+    -ldflags "-extldflags \"${LDFLAGS}\"" \
     -o $pkgname .
 }
 
