--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kdepim-apps-libs
-pkgver=20.04.1
+pkgver=20.04.2
 pkgrel=1
 pkgdesc="KDE PIM mail related libraries"
 arch=(x86_64)
@@ -10,23 +10,17 @@ license=(LGPL)
 depends=(libkleo pimcommon grantleetheme)
 makedepends=(extra-cmake-modules boost)
 source=("https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"{,.sig})
-sha256sums=('916d17c08de218f786f3515c25fbfca1d2d686e8efad686082569da4a5cb3855'
+sha256sums=('76a39e6cf75125664c413e5b749fb7b0bae5905b774f0e5a38835bd961e0caa8'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87) # Christoph Feck <cfeck@kde.org>
 
-prepare() {
-  mkdir -p build
-}
-
 build() {
-  cd build
-  cmake ../$pkgname-$pkgver \
+  cmake -B build -S $pkgname-$pkgver \
     -DBUILD_TESTING=OFF
-  make
+  cmake --build build
 }
 
 package() {
-  cd build
-  make DESTDIR="$pkgdir" install
+  DESTDIR="$pkgdir" cmake --install build
 }
