--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kpatience
-pkgver=20.04.1
+pkgver=20.04.2
 pkgrel=1
 pkgdesc="Offers a selection of solitaire card games"
 url="https://kde.org/applications/games/kpatience/"
@@ -13,24 +13,18 @@ groups=(kde-applications kde-games)
 depends=(libkdegames freecell-solver black-hole-solver hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools)
 source=("https://download.kde.org/stable/release-service/$pkgver/src/kpat-$pkgver.tar.xz"{,.sig})
-sha256sums=('647527a727df2d3ee41054025ebe3703f6da6c4d2a56262260d2dac0a78da22c'
+sha256sums=('bad46abf7aec96399488b513b5aadc80bb198c8d3cfbd63db5141b1b37357481'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87) # Christoph Feck <cfeck@kde.org>
 
-prepare() {
-  mkdir -p build
-}
-
 build() {
-  cd build
-  cmake ../kpat-$pkgver \
+  cmake -B build -S kpat-$pkgver \
     -DBUILD_TESTING=OFF \
     -DWITH_BH_SOLVER=ON
-  make
+  cmake --build build
 }
 
 package() {
-  cd build
-  make DESTDIR="$pkgdir" install
+  DESTDIR="$pkgdir" cmake --install build
 }
